--- a/source/index.html
+++ b/source/index.html
@@ -6,8 +6,17 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>DG Portfolio</title>
   <link rel="stylesheet" href="style.min.css">
+  <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-  <h1 class="header">Hello World!!!</h1>
+  <div id="container">
+    <h1>HELLO WORLD!!!</h1>
+    <h1>HELLO WORLD!!!</h1>
+    <h1>HELLO WORLD!!!</h1>
+
+    <h2>(Under Construction)</h2>
+  </div>
+
+  <div class="glitch"><span>HELLO WORLD!</span></div>
 </body>
 </html>
